plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id "org.flywaydb.flyway" version '11.10.1'
    id 'com.google.cloud.tools.jib' version '3.4.0'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

jib {
    from {
        image = "eclipse-temurin:21-jre"
        platforms {
            platform {
                architecture = "arm64"
                os = "linux"
            }
        }
    }
    to {
        image = 'chaechae121/trip-sok:latest'
        auth {
            username = System.getenv("DOCKER_USERNAME") ?: ""
            password = System.getenv("DOCKER_PASSWORD") ?: ""
        }
    }
    container {
        environment = [
                'TZ': 'Asia/Seoul'
        ]
        jvmFlags = ['-Dspring.profiles.active=stable'] // JVM 옵션 설정
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // framework
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.projectlombok:lombok'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:oracle-xe'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Elasticsearch Client
    implementation "co.elastic.clients:elasticsearch-java:8.15.0"
    implementation "org.elasticsearch.client:elasticsearch-rest-client:8.15.0"
    implementation "ai.djl:api:0.34.0"
    implementation "ai.djl.pytorch:pytorch-engine:0.34.0"
    implementation "ai.djl.huggingface:tokenizers:0.34.0"
    // Google Cloud Translation (official client)
    implementation platform('com.google.cloud:libraries-bom:26.38.0')
    implementation 'com.google.cloud:google-cloud-translate'
    // Google Auth (to call v3 with OAuth2 Service Account / ADC)
    implementation 'com.google.auth:google-auth-library-oauth2-http:1.23.0'

    // JWT 의존성
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    runtimeOnly 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // .env support
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'

    // Flyway
    implementation 'org.flywaydb:flyway-core:11.10.1'
    runtimeOnly 'org.flywaydb:flyway-database-oracle:11.10.1'

    // Database
    runtimeOnly 'com.oracle.database.jdbc:ojdbc11:23.8.0.25.04'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'

    // email
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // redis
    implementation 'org.redisson:redisson-spring-boot-starter:3.46.0'

    // Azure
    implementation 'com.azure:azure-ai-inference:1.0.0-beta.5'

    // WebFlux (WebClient usage)
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // ICU4J for robust transliteration (Any-Latin, Any-Katakana, etc.)
    implementation 'com.ibm.icu:icu4j:74.2'
}

flyway {
    url = project.findProperty("DB_URL")
    user = project.findProperty("DB_USERNAME")
    password = project.findProperty("DB_PASSWORD")
    locations = ['classpath:db/migration']
}

tasks.named('test') {
    useJUnitPlatform()
}
